# reference-implementations-afm

./: .gitignore  Dependencies.toml  README.md  RELEASING.md  agent.bal  interface_console_chat.bal  interface_web_chat.bal  interface_webhook.bal  main.bal  parser.bal  samples.txt  types.bal
.github/: CODEOWNERS
ballerina-interpreter/: Ballerina.toml  DOCKER.md  Dependencies.toml  Dockerfile  README.md  agent.bal  interface_console_chat.bal  interface_web_chat.bal  interface_web_ui.bal  interface_webhook.bal  main.bal  parser.bal  skills.bal  types.bal  web_chat_ui.bal
langchain-interpreter/: .dockerignore  Dockerfile  README.md  pyproject.toml
langchain-interpreter/src/afm/: __init__.py
langchain-interpreter/src/afm_cli/: cli.py
langchain-interpreter/src/afm_cli/interfaces/: webhook.py
langchain-interpreter/src/langchain_interpreter/: __init__.py  agent.py  cli.py  exceptions.py  models.py  parser.py  providers.py  schema_validator.py  templates.py  variables.py
langchain-interpreter/src/langchain_interpreter/interfaces/: console_chat.py  web_chat.py
langchain-interpreter/src/langchain_interpreter/resources/: chat-ui.html
langchain-interpreter/tests/: __init__.py  conftest.py  test_agent.py  test_console_chat.py  test_mcp.py  test_models.py  test_parser.py  test_providers.py  test_schema_validator.py  test_templates.py  test_variables.py  test_web_chat.py  test_webhook.py
langchain-interpreter/tests/fixtures/: sample_consolechat_agent.afm.md
python-interpreter/: .dockerignore  Dockerfile  README.md  pyproject.toml
templates/: agent_template.afm.md
(+43 files in other folders)
